--- a/styles.css
+++ b/styles.css
@@ -189,12 +189,14 @@ section {
     background-color: white;
     box-shadow: 0 10px 6px -6px #777;
 }
-/* section p {
-    clear: left;
-} */
-/* section p:first-of-type {
-    display: none;
-} */
+ol li{
+  list-style-type: none;
+}
+figure section {
+    margin-left: 0;
+    /* position: left; */
+    width: 235%;
+}
 h3 {
     font-weight: bold;
     font-size: 2em;
@@ -230,8 +232,8 @@ nav.pagenavigation a:hover, nav.pagenavigation a:focus {
 }
 figure {
     width: 40%;
-    margin: 1em auto;
-    /* border: 2px solid black; */
+    margin-top: 3em;
+    margin-left: 1em;
 }
 figcaption {
     padding: 1em;
@@ -244,7 +246,6 @@ figure img {
     width: 90%;
     height: 90%;
     float: none;
-    border: 1px solid red;
 }
 
 .article-aside-outer-container li {
